--- a/pages/styles.css
+++ b/pages/styles.css
@@ -35,7 +35,7 @@ body {
     gap: 64px;
 }
 
-.header {    
+.header {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -119,7 +119,7 @@ textarea {
 
 
 .prompt-box:focus {
-    border-color:rgba(255, 255, 255, 0.75)
+    border-color: rgba(255, 255, 255, 0.75)
 }
 
 
@@ -320,10 +320,13 @@ textarea {
     transform: none;
 }
 
-.output-content p {
-    text-align: center;
+.output-content pre {
+    text-align: left;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: solid 1px rgba(255, 255, 255, 0.2);
     white-space: pre-line;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 @media (min-width: 810px) and (max-width: 1199px) {
@@ -391,8 +394,7 @@ textarea {
 }
 
 
-
- /* Loading ring animation */
+/* Loading ring animation */
 .loader {
     width: 18px;
     height: 18px;
